<resources>
    <string name="app_name">Furni</string>
    <string name="se_connecter">Se connecter</string>
    <string name="sinscrire">S \' inscrire</string>
    <string name="connexion">Connexion</string>
    <string name="bienvenue">Bienvenue sur Furni</string>
    <string name="revoir">Content de vous revoir</string>
    <string name="commerce">Commerce</string>
    <string name="inscription">Inscription</string>
    <string name="password">Mot de passe</string>
    <string name="username">email ou identifiant</string>
    <string name="email">email</string>
    <string name="name">Nom</string>
    <string name="recherche">Que recherchez-vous ?</string>


    <string name="explorer">Explorer</string>
    <string name="categorie">Categorie</string>
    <string name="categories">Categories</string>
    <string name="produit">Produit</string>
    <string name="produits">Produits</string>
    <string name="panier">Panier</string>
    <string name="produitsPop">Produits Populaires</string>
    <string name="pas_de_compte">Pas encore membre?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="carreaux">carreaux</string>
    <string name="scie">scie</string>
    <string name="tole">tole</string>
    <string name="truelle">truelle</string>
    <string name="tuile">tuile</string>
    <string name="pointe">pointe</string>
    <string name="interrupteur">interrupteur</string>
    <string name="moquette">moquette</string>
    <string name="perceuse">perceuse</string>
    <string name="peinture">peinture</string>
    <string name="pinceau">pinceau</string>
    <string name="echelle">echelle</string>
    <string name="ciment">ciment</string>
    <string name="ampoule">ampoule</string>
    <string name="chaux">chaux</string>


    <string name="item_1">Original Oil 0.5 oz</string>
    <string name="item_2">Cream 2 oz</string>
    <string name="item_3">Beard Spray 1 oz</string>
    <string name="item_4">Beard Brush</string>
    <string name="cancel">Annuler</string>
    <string name="payment">PAYEMENT</string>
    <string name="shipping_title">Shipping Costs:</string>
    <string name="total_title">Total:</string>
    <string name="currency">Fcfa</string>
    <string name="product_id">PRODUIT ID:</string>
    <string name="categorie_id">Category ID:</string>
    <string name="cart_list">CART LIST</string>
    <string name="waiting">waiting</string>

</resources>
