<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#ffffff"
tools:context=".ConnexionActivity">



        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_duc"
            android:layout_width="284dp"
            android:layout_height="366dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.663"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/duck" />

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/color02"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/calibri"
                    android:text="@string/revoir"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/calibri"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="80dp"
                    android:layout_height="4dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:background="#ffc6c6" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="-64dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="36dp"
                        android:layout_marginBottom="24dp"
                        android:fontFamily="@font/calibri"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        tools:text="@string/se_connecter" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:textColorHint="#FFB3B3B3">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_person_gray_24dp"
                            android:drawablePadding="16dp"
                            android:fontFamily="@font/calibri"
                            android:hint="@string/username"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:textColorHint="#FFB3B3B3"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_lock_gray_24dp"
                            android:drawablePadding="16dp"
                            android:fontFamily="@font/calibri"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/buttonshape"
                android:backgroundTint="@color/color02"
                android:fontFamily="@font/calibri"
                android:text="@string/connexion"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right"
                    tools:text="@string/pas_de_compte" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:onClick="OpenSignupPage"
                    android:text="@string/sinscrire"
                    android:textColor="#F40606" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="skip"
                    android:text="skip" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>