<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/product_parent"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/item_1" />

        <RelativeLayout
            android:id="@+id/product_info_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/product_image"
            android:gravity="center_vertical"
            android:paddingStart="5dp">

            <RelativeLayout
                android:id="@+id/product_first_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/product_price"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/item_1"
                    android:textColor="@color/colorTitle"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:maxLength="10"
                    android:text="2500"
                    android:textColor="@color/colorTitle"
                    android:textSize="15dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/product_second_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/product_first_row"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/product_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/product_cancel_button"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/product_id"
                    android:textColor="@color/colorSubtitle"
                    android:textSize="15dp" />

                <RelativeLayout
                    android:id="@+id/product_cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        app:cardBackgroundColor="@color/colorCancel"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:id="@+id/product_cancel"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:ellipsize="end"
                                android:lines="1"
                                android:text="@string/cancel"
                                android:textColor="@color/colorTitle" />

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/product_parent"
        android:background="@color/colorCancel" />

</RelativeLayout>