<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".CartActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <RelativeLayout
            android:id="@+id/back_arrow"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentLeft="true"
            android:background="?actionBarItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_baseline_arrow_back_white"
                android:backgroundTint="#050505" />

        </RelativeLayout>

        <TextView
            android:id="@+id/cart_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:lines="1"
            android:maxLength="15"
            android:text="@string/cart_list"
            android:textColor="@color/colorTitle"
            android:textSize="16dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/purchase_parent"
        android:layout_below="@+id/toolbar" />

    <TextView
        android:id="@+id/empty_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="Your cart is empty"
        android:textColor="@color/colorSubtitle"
        android:textSize="16dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/purchase_parent"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentBottom="true">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@color/colorCancel" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/payment_parent"
            android:layout_below="@+id/divider"
            android:layout_alignParentTop="true"
            android:paddingTop="20dp">

            <RelativeLayout
                android:id="@+id/shipping_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/shipping_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/shipping_price"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/shipping_title"
                    android:textColor="@color/colorTitle"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/shipping_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:maxLength="10"
                    android:text="$0.00"
                    android:textColor="@color/colorTitle"
                    android:textSize="16dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/total_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shipping_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/total_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/total_price"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/total_title"
                    android:textColor="@color/colorTitle"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:maxLength="10"
                    android:text="$0.00"
                    android:textColor="@color/colorTitle"
                    android:textSize="16dp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/payment_parent"
            android:layout_width="130dp"
            android:layout_height="42dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/colorPayment"
            app:cardCornerRadius="21dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:id="@+id/payment_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:backgroundTint="#FFC107"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/payment"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>